--- a/Topic-3-Numercial-Descriptions.Rmd
+++ b/Topic-3-Numercial-Descriptions.Rmd
@@ -6,8 +6,8 @@ output:
   markdown::html_format:
     keep_md: true
     meta:
-      css: [default, slides, "Assets/css/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css"]
-      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js, external-link.min.js", "Assets/js/lastupdated.js"]
+      css: [default, slides, "Assets/css/custom.css", "@npm/@xiee/utils/css/key-buttons.min.css, heading-anchor.min.css"]
+      js: [slides, "@npm/@xiee/utils/js/key-buttons.min.js, external-link.min.js, heading-anchor.min.js", "Assets/js/lastupdated.js"]
     options:
       number_sections: true
       latex_math: true
@@ -43,13 +43,12 @@ load("Data-Frames-SUNY-Concepts-in-Statistics/actor.RData")
 
 ---
 
-## Median, Quartiles, Interquartile Range and Outliers
+## Quartiles, Interquartile Range and Outliers
 
-- The three **quartiles**, $Q_1$, $Q_2$, and $Q_3$ are numbers in an ordered data set that divide the data set into four equal parts. The second quartile is known as the **median**.
-- **Interquartile Range (IQR for short)** is the measure of variation when using the median to measure center. It is defined as the difference of the third and the first quartiles: $\text{IQR}=Q_3-Q_1$.
-- When the center and the spread are measured by the median and the IQR, a value in the data is considered an **outlier** if the value is greater than $Q_3 + 1.5 \cdot \text{IQR}$ or less than $Q_1 − 1.5 \cdot \text{IQR}$.
-
-  **Note:** An outlier in this definition is also called a **mild outlier**. An outlier that is more extreme than $Q_1 + 3 \cdot \text{IQR}$ or $Q_3 - 3 \cdot \text{IQR}$ is also called **extreme outlier**.
+- The **second quartile** $Q_2$ of a data set is the median. The **first (lower) quartiles** $Q_1$ is the median of the lower half of the data set. The **third (upper) quartile** $Q_3$ is the median of the upper quartile.
+- The **Interquartile Range (IQR for short)** of a data set is the difference of the third and the first quartiles: $\text{IQR}=\text{upper quartile} - \text{lower quartile}$.
+- An **outlier** is an observation that is more than $1.5\text{IQR}$ away from the nearest quartile.
+- An outlier is an **extreme outlier** if it is more than $3\text{IQR}$ from the nearest quartile and it is a **mild outlier** otherwise.
 - The minimum, $Q_1$, $Q_2$, $Q_3$ and maximum are known as the "**five-number summary**" of the data set.
 <!-- - The difference of maximum and minimum is called the **range**. -->
 
@@ -74,7 +73,7 @@ cat(paste(as.vector(head(trees$Height,15)), collapse=", "))
   ```
   :::
 - Find the median $Q_2$: The sample size is 15. The $Q_2$ is the 8-th value 75 in the sorted data.
-- Find $Q_1$ and $Q_3$: $Q_1$ is the median of the values lower that the median that is 4-th value 69. $Q_3$ is the median of the values higher than the median that is the 4-th to the last value 79.
+- Find $Q_1$ and $Q_3$: $Q_1$ is the median of the lower half of values, that is, 4-th value 69. $Q_3$ is the median of the upper half values, that is, the 4-th to the last value 79.
 - Find the IQR: $\text{IQR}=Q_3-Q_1=79-69=10$.
 - Since $Q_1-1.5\text{IQR}=69-1.5\cdot 10=54$ and $Q_3+1.5\text{IQR}=79-1.5 \cdot 10=94$, there is no outlier in this sample.
 
@@ -100,7 +99,7 @@ cat(paste(as.vector(head(trees$Height,15)), collapse=", "))
 
 ---
 
-## Example: Box Plot - Best Oscar Winners (1/2)
+## Example: Box Plot - Best Oscar Winners (1 of 2)
 
 Create the boxplot for the ages of 32 best actor oscar winners (1970–2001).
 
@@ -114,7 +113,7 @@ cat(paste(sort(actor_age$Age), collapse=", "))
 
 - The quartiles are $Q_2=42.5$, $Q_1=37.5$, $Q_3=49.5$.
 
-- The interquartile range and the bounds for mild outliers are  $\text{IQR}=12$ $Q_1-1.5\text{IQR}= 19.5$, and $Q_3+1.5\text{IQR}=67.5$ respectively.
+- The interquartile range is $\text{IQR}=12$, and the bounds for outliers are $Q_1-1.5\text{IQR}= 19.5$ and $Q_3+1.5\text{IQR}=67.5$.
 
 - The smallest number that is not an outlier is 31. The largest number that is not an outlier is 61. Those two numbers bound the whiskers.
 
@@ -122,7 +121,7 @@ cat(paste(sort(actor_age$Age), collapse=", "))
 
 ---
 
-## Example: Box Plot - Best Oscar Winners (2/2)
+## Example: Box Plot - Best Oscar Winners (2 of 2)
 
 - Based on the five-number summary, the boxplot is shown below.
 
@@ -508,7 +507,7 @@ For more information, see [Create a box and whisker chart in Excel 365](https://
 
 ---
 
-## Lab Practice {.unnumbered}
+## Lab Practice: Speeds of Cars {.unnumbered}
 
 Consider the following sample that consists of speeds of 20 cars.
 
